--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,14 @@ button {
 .create-form {
     width: 30%;
     height: 30vh;
-    background-color: aqua;
+    background-color: rgb(255, 255, 255, 0.2);
+    backdrop-filter: blur();
+    margin-bottom: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
+    box-shadow: 0 10px 80px -5px rgba(0, 0, 0, 0.3);
+    border: 0.3px solid rgba(255, 255, 255, 0.3)
 }
 
 .create-form input {
@@ -24,6 +28,7 @@ button {
     width: 70%;
     font-size: 1.8rem;
     padding: 5px;
+    background: none;
 }
 
 .create-form button {
@@ -38,8 +43,11 @@ button {
     font-size: 1.8rem;
     display: flex;
     align-items: center;
-    background-color: aqua;
+    background-color: rgb(255, 255, 255, 0.2);
+    backdrop-filter: blur();
     justify-content: space-around;
+    box-shadow: 0 10px 80px -5px rgba(0, 0, 0, 0.3);
+    border: 0.3px solid rgba(255, 255, 255, 0.3)
 }
 
 .completed-btn {
@@ -55,4 +63,20 @@ button {
         border-radius: 50%;
         background: none;
         border: 4px solid white;
+}
+
+.btn-container {
+    display: flex;
+    justify-content: space-between;
+    width: 20%;
+}
+
+.btn-container button {
+    padding: 5px;
+}
+
+/* for time been */
+
+.todo h4 {
+    width: 70%;
 }
